# h2ai_project

./: README.md  app.py  gen_data.py  model.py  pyproject.toml
dashboard/: datagrid.py  pie.py  radar.py
