[project]
name = "h2ai-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Lyn",email = "lynma01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "orange3 (>=3.38.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
