[project]
name = "h2ai-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Lyn",email = "lynma01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "orange3 (>=3.38.1,<4.0.0)",
    "haystack (>=0.42,<0.43)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pypdf (>=5.3.1,<6.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "openai (>=1.66.3,<2.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "streamlit-calendar (>=1.2.1,<2.0.0)",
    "polars (>=1.25.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "faker (>=37.0.0,<38.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
